# family_tree

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml
back/: Makefile  pyproject.toml  tree.py
front/: package-lock.json  package.json  tree.html
front/public/: index.html
front/src/: App.js  FamilyTree.css  FamilyTree.js
